oldMeta/Ts/unpackaged/Telangana/objects/FeedBack__c.object
<CustomObject>
    <description>it takes feedback from the candidates</description>
    <fields>
        <fullName>Address__c</fullName>
        <description>it takes address</description>
        <inlineHelpText>enter the address</inlineHelpText>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Adhaar_Number__c</fullName>
        <label>Adhaar Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assembly_Constituency__c</fullName>
        <description>it takes assembly constituency</description>
        <inlineHelpText>it is done by field dependencies</inlineHelpText>
        <label>Assembly Constituency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Districts__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Nzb urban</fullName>
                </value>
                <value>
                    <fullName>Nzb rural</fullName>
                </value>
                <value>
                    <fullName>Km urban</fullName>
                </value>
                <value>
                    <fullName>Km rural</fullName>
                </value>
                <value>
                    <fullName>Hyd urban</fullName>
                </value>
                <value>
                    <fullName>Hyd rural</fullName>
                </value>
                <value>
                    <fullName>Rang urban</fullName>
                </value>
                <value>
                    <fullName>Rang rural</fullName>
                </value>
                <value>
                    <fullName>Adbd urban</fullName>
                </value>
                <value>
                    <fullName>Adbd rural</fullName>
                </value>
                <value>
                    <fullName>Wrngl urban</fullName>
                </value>
                <value>
                    <fullName>Wrngl rural</fullName>
                </value>
                <value>
                    <fullName>Mdk urban</fullName>
                </value>
                <value>
                    <fullName>Mdk rural</fullName>
                </value>
                <value>
                    <fullName>Nal urban</fullName>
                </value>
                <value>
                    <fullName>Nal rural</fullName>
                </value>
                <value>
                    <fullName>Kmnr urban</fullName>
                </value>
                <value>
                    <fullName>Kmnr rural</fullName>
                </value>
                <value>
                    <fullName>Mahab urban</fullName>
                </value>
                <value>
                    <fullName>Mahab rural</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_No__c</fullName>
        <description>it takes phone number</description>
        <inlineHelpText>enter the phone number</inlineHelpText>
        <label>Contact No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Districts__c</fullName>
        <label>Districts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--Select District--</fullName>
                    <default>true</default>
                    <label>--Select District--</label>
                </value>
                <value>
                    <fullName>1.Adilabad</fullName>
                </value>
                <value>
                    <fullName>2.Nizamabad</fullName>
                </value>
                <value>
                    <fullName>3.Karimnagar</fullName>
                </value>
                <value>
                    <fullName>4.Medak</fullName>
                </value>
                <value>
                    <fullName>5.Rangareddy</fullName>
                </value>
                <value>
                    <fullName>6.Hyderabad</fullName>
                </value>
                <value>
                    <fullName>7.Mahabubnagar</fullName>
                </value>
                <value>
                    <fullName>8.Nalgonda</fullName>
                </value>
                <value>
                    <fullName>9.Warangal</fullName>
                </value>
                <value>
                    <fullName>10.Khammam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>it takes email from the candidate</description>
        <inlineHelpText>enter the email</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FeedBack__c</fullName>
        <description>it takes the feedback from the candidate</description>
        <inlineHelpText>enter the feedback</inlineHelpText>
        <label>FeedBack</label>
        <type>TextArea</type>
    </fields>
    <label>FeedBack</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FeedBack</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Addhar_Number_Format</fullName>
        <active>true</active>
        <errorConditionFormula>or(not isnumber( Adhaar_Number__c),len( Adhaar_Number__c )&lt;12)</errorConditionFormula>
        <errorDisplayField>Adhaar_Number__c</errorDisplayField>
        <errorMessage>Enter the Adhaar interms of 12 digit number only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_Number_Only</fullName>
        <active>true</active>
        <errorConditionFormula>not isnumber( Contact_No__c )</errorConditionFormula>
        <errorDisplayField>Contact_No__c</errorDisplayField>
        <errorMessage>enter the number only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Number_Length_10</fullName>
        <active>true</active>
        <errorConditionFormula>OR(  LEN(Contact_No__c) &gt; 10 , LEN(Contact_No__c) &lt; 10 )</errorConditionFormula>
        <errorDisplayField>Contact_No__c</errorDisplayField>
        <errorMessage>enter phone number in ten digits only</errorMessage>
    </validationRules>
</CustomObject>